<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.percentlayout.widget.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".LoginActivity">

        <ImageView
            app:layout_widthPercent="50%"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:layout_centerInParent="true"
            android:src="@drawable/nav_logo_whiteout"
            android:layout_centerHorizontal="true"
            android:layout_above="@+id/tilUsername"
             android:layout_width="0dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="wrap_content"
            app:layout_widthPercent="80%"
            android:layout_height="wrap_content"
            android:id="@+id/tilUsername"
            android:layout_centerInParent="true"
            android:layout_margin="16dp"
            android:hint="@string/username_text_input_hint"
            app:placeholderTextColor="@color/black"
            app:hintTextColor="@color/black">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/tietUsername"
            android:inputType="text"
            android:imeOptions="actionNext"
            />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tilUsername"
            android:layout_centerInParent="true"
            app:layout_widthPercent="80%"
            android:layout_margin="16dp"
            android:hint="@string/password_text_input_hint"
            app:placeholderTextColor="@color/black"
            app:hintTextColor="@color/black">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/tietPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginButton"
            app:layout_widthPercent="80%"
            android:layout_centerInParent="true"
            android:layout_below="@id/tilPassword"
            android:text="@string/login_button_text" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/signupButton"
            app:layout_widthPercent="80%"
            android:layout_centerInParent="true"
            android:layout_below="@id/loginButton"
            android:text="@string/sign_up_button_text"
            android:backgroundTint="@color/grey"/>
    </androidx.percentlayout.widget.PercentRelativeLayout>
</layout>
